added fabric to title

--- a/packages/fabric-mfe/public/index.html
+++ b/packages/fabric-mfe/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Micro Frontend Datalake App</title>
+    <title>Micro Frontend Fabric App</title>
     <script type="text/javascript">
       document.write('<script type="text/javascript" src="config.js?'+ (new Date()).getTime()+'"><\/script>');
     </script>
